traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:40: error: not enough arguments for method posFinal: (a: Boolean, b: Boolean)Boolean.
Unspecified value parameters a, b.
  } while (!posFinal())
                    ^